--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll --verbose --coverage",
+    "start":"node index.js"
+  },
+  "engines":{
+    "node":"21.6.0"
   },
   "keywords": [],
   "author": "",
@@ -13,12 +17,19 @@
     "bcrypt": "^5.1.1",
     "config": "^3.3.11",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
     "joi": "^17.12.0",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.1.1",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "winston": "^3.11.0",
+    "winston-mongodb": "^5.1.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   }
 }
